# certeus

./: .autonomous_mode  .bandit  .bashrc_autonomous  .codespellrc  .coverage  .devcontainer.json  .dockerignore  .editorconfig  .env.autonomous  .env.enterprise.example  .env.example  .env.macos-runner  .git-askpass.sh  .gitattributes  .gitconfig  .gitignore  .gitleaks.toml  .gitmessage.txt  .gitmodules  .pre-commit-config.yaml  .prettierignore  .pylanceignore  .secrets.baseline  .spectral.yaml  A4_FORMAL_PROOFS_COMPLETION.md  A5_QTMP_COMPLETION.md  A6_SECURITY_IMPLEMENTATION_REPORT.md  A7_CI_CD_SLO_GATES_IMPLEMENTATION_REPORT.md  A8_SDK_DX_COMPLETE_REPORT.md  A8_SDK_DX_IMPLEMENTATION_PLAN.md  A9_DEPLOYMENT_SCALING_COMPLETE_REPORT.md  AGENT.md  AGENTS.md  ANALYSIS_COMPLETE.md  API_DOCUMENTATION.md  ARCHITECTURE_DIAGRAMS.md  AUTOMATION_STATUS.md  AUTONOMOUS_MODE_STATUS.md  AUTONOMY_REPORT.md  CERTEUS_A1_A8_COMPLETE_STATUS.md  (+93 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.githooks/: commit-msg  pre-commit  pre-commit.ps1
.github/: AUTOMATION_CONFIG.md  CODEOWNERS  certeus.env.defaults  dependabot.yml  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: proposal.md  qna.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  refutation_ticket.md  release-polish.md
.github/workflows/: api-changelog.yml  api-tests.yml  asset-guard.yml  asset-health.yml  auto-merge-work.yml  auto-open-pr.yml  build_private.yml  (+55 more)
.venv2/: pyvenv.cfg
.venv_cli/: pyvenv.cfg
backups/: automatic_error_eliminator.py.backup  distributed_ultra_scale.py.backup  pco_bundle.py.backup
bench/: METHOD.md  REPORT.md  ledger_bench.py  pg.conf.sample  run.py
billing/: proof_token_bank.py
certeus/: __init__.py
clients/python/certeus_sdk/: __init__.py  client.py  pyproject.toml
clients/python/certeus_sdk/examples/: retry_idem_sample.py
constraints/: requirements-constraints.txt
core/: __init__.py  api.py  logging.py  omega_jurisdiction.py  omega_lang.py  omega_litera_telos.py  plugin_loader.py  version.py
data/: cfe_lensing.json  fin_tokens.json  lexqft_pairs_state.json  lexqft_renorm_state.json  lexqft_tunnel_log.jsonl  pfs_dht.gw19.json  pfs_dht.gw27.json  pfs_dht.json  pfs_paths.gw14.json  pfs_paths.gw2.json  pfs_paths.gw27.json  pfs_paths.gw3.json  pfs_paths.gw31.json  pfs_paths.gw32.json  pfs_paths.gw38.json  pfs_paths.gw4.json  pfs_paths.gw6.json  pfs_paths.json  qtm_presets.gw0.json  qtm_presets.gw19.json  qtm_presets.json
deploy/: canary_policy.yml
docs/: 404.md  90_dni_work.md  A10_ADVANCED_FEATURES_COMPLETE_REPORT.md  A2_LEDGER_DOD_COMPLETION.md  A3_PFS_DOD_COMPLETION.md  AGENENT_PLAN.md  AGENT_PROMPTS.md  ARCHITECTURE.md  CERTEUS_Blueprint_v1_0.md  CONCEPTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_ENVIRONMENT.md  DEV_WORKFLOW.md  DoD_checklist.md  ENDPOINTS.md  ENTERPRISE.md  IMPOSSIBLE_SCALE_ACHIEVEMENT.md  MIGRATION.md  MONITORING.md  PERFORMANCE_METRICS.md  QTMP_Spec_v1_0.md  QUICKSTART.md  README_PL.md  RELEASE.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  REMOTE_DEVELOPMENT.md  ROADMAP.md  SDK.md  SDK_PY_QUICKSTART.md  SECURITY.md  TECHNICAL_SPECIFICATIONS.md  TESTING.md  TROUBLESHOOTING.md  Untitled-1.json  WORKLOG.md  a11y_checklist.md  agent_plan.md  (+17 more)
dr/: temporal_fortress.py
examples/: README.md  fin_alpha_curl.sh  lex_motion_curl.sh
exports/: raport_CER-1.txt  raport_pl-286kk-0001.txt
governance/: pcu_breakglass.py
infra/: docker-compose.dev-stack.yml  docker-compose.dev.yml  docker-compose.local-infra.yml  docker-compose.monitoring.yml
ingest_repo/: MANIFEST.json  MANIFEST.md  REPO_TREE.md  pack_01.txt  pack_02.txt  pack_03.txt
kernel/: __init__.py  e2e_verifier.py  mismatch_protocol.py  smt_translator.py  truth_engine.py
migrations/: 001_ledger_schema.sql
monitoring/: alert-rules.yaml  correlation.py  metrics_goodhart.py  metrics_slo.py  otel_setup.py  profiling.py  shedder.py
openapi_spec_validator/: __init__.py
ops/: kill_switch.sh
packs_core/: __init__.py  loader.py
plugins/: init.py
policies/: VERSIONING.md
proof_artifacts/: cvc5.lfsc  input.smt2  z3.drat
proofs/: cvc5.lfsc  z3.drat
routers/: ledger.py
runtime/: complexity_estimator.py  complexity_firewall.py  p2p_queue.py  p2p_transport.py  pco_encryptor.py  proof_queue.py
schemas/: answer_contract_v1.json  certeus.provenance.v1.json  data_pco_v0.1.json  model_pco_v0.1.json  pca2_v1.json  pco-public.schema.json  pco-v0.3.json  pco.extensions.mailops.chatops.json  pco.schema.json  provenance_receipt_v1.json  publication_contract_v1.json  security_pco_v0.1.json
scripts/: agent_down.sh  agent_up.sh  apply_headers.py  apply_ps1_headers.py  apply_section_headers.py  apply_section_headers_shell.py  apply_web_headers.py  apply_yaml_headers.py  auto_windows.ps1  autonomous_agent.py  aws-find-macos-ami.sh  bootstrap.ps1  boundary_diff.py  boundary_snapshot.py  build_flags_from_mapping.py  check_drat.sh  check_hashes.ps1  check_headers.py  check_lfsc.sh  check_premium_style.py  check_proofs.py  cleanup_legacy_headers.py  codex_history.py  compute_truth_gates.py  dev_env.ps1  dev_env.sh  ed25519_keytool.py  env_load.ps1  fix_bom.py  fix_decorator_split.py  force_insert_sections.py  generate_openapi.py  generate_proofs.py  git_push.py  keys_dev.ps1  lexlog_eval_smoke.py  lexlog_eval_smoke_fallback.py  macos_runner_quickstart.sh  make_merkle_sample.py  make_pco_bundle.py  (+30 more)
security/: frost.py  key_manager.py  pq_mldsa.py  proofs.md  ra.py  rbac_policies.md  signing.py
services/: __init__.py
tasks/: A0.md  A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md  A9.md  README.md
templates/: answer_contract.txt.placeholder
test/: test_a6_security.py  test_a7_ci_cd_slo_gates.py  test_a8_sdk_dx.py
tests/: conftest.py  test_adapters_local_impl.py  test_merkle.py  test_pco_core.py  test_pco_public.py  test_raas_service.py  test_zkp_service.py
tools/: fix_certeus_headers.py  normalize_certeus_headers.py  normalize_section_spacing.py  openapi-sync.sh  pre-commit-cspell.sh
utils/: __init__.py  console.py
(+1492 files in other folders)
