# +=====================================================================+
# |                          CERTEUS — HEART                            |
# +=====================================================================+
# | FILE: pyproject.toml                                                |
# | ROLE:                                                               |
# |  PL: Konfiguracja pakietu, ruff, dev-deps.                          |
# |  EN: Package config, ruff, dev-deps.                                |
# +=====================================================================+

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certeus"
version = "0.0.1"
description = "CERTEUS – Proof-Driven Autonomy (skeleton)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2",
  "pyyaml>=6",
  "jsonschema>=4.25.0",
  "python-multipart>=0.0.20",
  "cryptography>=45,<46",
  "requests>=2.32.0",
  "prometheus_client>=0.22.0",
  # A2 - Ledger dependencies
  "asyncpg>=0.29.0",
  "boto3>=1.35.0", 
  "aiohttp>=3.10.0",
  # A3 - PFS dependencies (optional)
  "fusepy>=3.0.1; sys_platform == 'linux'",
  # A4 - Formal Proofs dependencies (optional)
  "z3-solver>=4.12.0",
  "cvc5>=1.0.0",
  "psutil>=5.9.0",
  # A5 - QTMP dependencies
  "numpy>=1.24.0",
  "scipy>=1.10.0",
]

[tool.setuptools]
packages = ["certeus"]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "pytest>=8",
  "pre-commit>=3.7",
  "pytest-asyncio>=0.26",
  "httpx>=0.28",
  "z3-solver>=4.13",
  "hypothesis>=6.100",
  "openapi-spec-validator>=0.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
  "openapi_spec_validator/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  "B008",  # Do not perform function call in argument defaults (common in FastAPI)
  "B904",  # Within an `except` clause, raise exceptions with `raise ... from err`
  "E722",  # Do not use bare `except` (legacy code patterns)
  "E501",  # Line too long (handled by formatter when possible)
]

[tool.ruff.lint.per-file-ignores]
"core/omega/transforms.py" = ["F811"]
"services/api_gateway/routers/devices.py" = ["I001"]
"sdk/python/certeus_sdk/client_generated.py" = ["F811"]

[tool.ruff.lint.isort]
known-first-party = ["packs_core", "services", "core", "monitoring", "certeus"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
